Enhance project details and carousel functionality
Updated project sections with new carousel data attributes, added skills gained for multiple projects, and improved image handling in the carousel setup.

--- a/projects.html
+++ b/projects.html
@@ -39,21 +39,14 @@
     <!-- ===================== Pia-the-μRSC ===================== -->
     <article class="project-row">
       <div class="project-media">
-        <div class="carousel" data-carousel>
+        <div class="carousel" data-carousel data-set="pia">
           <button class="car-btn prev" type="button" aria-label="Previous image"><i class="fa-solid fa-chevron-left"></i></button>
 
           <div class="car-stage">
-            <img
-              class="car-image"
-              src="assets/img/pia-1.jpg"
-              alt="Pia-the-μRSC photo"
-              loading="lazy"
-              decoding="async"
-            />
+            <img class="car-image" src="assets/img/pia-1.jpg" alt="Pia-the-μRSC photo" loading="lazy" decoding="async" />
           </div>
 
           <button class="car-btn next" type="button" aria-label="Next image"><i class="fa-solid fa-chevron-right"></i></button>
-
           <div class="car-dots" aria-label="Carousel navigation"></div>
         </div>
       </div>
@@ -75,6 +68,15 @@
           <li>Firmware (MicroPython)</li>
         </ul>
 
+        <div class="project-skills">
+          <h3 class="skills-title"><i class="fa-solid fa-sparkles"></i> Skills gained</h3>
+          <ul class="skills-list">
+            <li>MicroPython PWM servo control + motion tuning</li>
+            <li>CAD redesign for fit, assembly, and replicability</li>
+            <li>Hardware prototyping + documentation workflow</li>
+          </ul>
+        </div>
+
         <div class="project-links">
           <a href="https://github.com/BadshahAli-Robo/Pia-the-MicroRSC-to-be" target="_blank" rel="noopener">
             <i class="fa-brands fa-github"></i> GitHub Repo
@@ -86,21 +88,14 @@
     <!-- ===================== RSC ===================== -->
     <article class="project-row">
       <div class="project-media">
-        <div class="carousel" data-carousel>
+        <div class="carousel" data-carousel data-set="rsc">
           <button class="car-btn prev" type="button" aria-label="Previous image"><i class="fa-solid fa-chevron-left"></i></button>
 
           <div class="car-stage">
-            <img
-              class="car-image"
-              src="assets/img/RSC-1.jpg"
-              alt="Robotic Study Companion (RSC) photo"
-              loading="lazy"
-              decoding="async"
-            />
+            <img class="car-image" src="assets/img/RSC-1.jpg" alt="Robotic Study Companion (RSC) photo" loading="lazy" decoding="async" />
           </div>
 
           <button class="car-btn next" type="button" aria-label="Next image"><i class="fa-solid fa-chevron-right"></i></button>
-
           <div class="car-dots" aria-label="Carousel navigation"></div>
         </div>
       </div>
@@ -122,6 +117,15 @@
           <li>Assembly docs</li>
         </ul>
 
+        <div class="project-skills">
+          <h3 class="skills-title"><i class="fa-solid fa-sparkles"></i> Skills gained</h3>
+          <ul class="skills-list">
+            <li>Hardware robustness improvements (mounting + wiring)</li>
+            <li>Clear assembly documentation for replication</li>
+            <li>Iterative design-for-maintainability mindset</li>
+          </ul>
+        </div>
+
         <div class="project-links">
           <a href="https://rsc.ee/docs.html" target="_blank" rel="noopener">
             <i class="fa-solid fa-book"></i> Documentation
@@ -130,12 +134,66 @@
       </div>
     </article>
 
+    <!-- ===================== Claw Machine ===================== -->
+    <article class="project-row">
+      <div class="project-media">
+        <div class="carousel" data-carousel data-set="claw">
+          <button class="car-btn prev" type="button" aria-label="Previous image"><i class="fa-solid fa-chevron-left"></i></button>
+
+          <div class="car-stage">
+            <img class="car-image" src="assets/img/claw-1.jpg" alt="Claw Machine project photo" loading="lazy" decoding="async" />
+          </div>
+
+          <button class="car-btn next" type="button" aria-label="Next image"><i class="fa-solid fa-chevron-right"></i></button>
+          <div class="car-dots" aria-label="Carousel navigation"></div>
+        </div>
+      </div>
+
+      <div class="project-info">
+        <h2 class="project-title"><i class="fa-solid fa-claw-marks"></i> Claw Machine – Robotics I Project</h2>
+        <p class="project-tagline">Course project: a claw machine that picks and transfers balls using custom mechanics and control.</p>
+
+        <p class="project-text">
+          Built a working claw-machine prototype as part of Robotics I. Focused on mechanical design and prototyping,
+          integration, and a functional demo for ball pickup and delivery.
+        </p>
+
+        <ul class="project-tags">
+          <li>Mechanism design</li>
+          <li>3D printing</li>
+          <li>Embedded control</li>
+          <li>System integration</li>
+        </ul>
+
+        <div class="project-skills">
+          <h3 class="skills-title"><i class="fa-solid fa-sparkles"></i> Skills gained</h3>
+          <ul class="skills-list">
+            <li>Designing grippers/gears for reliable grasp</li>
+            <li>Rapid iteration: test → adjust → reprint</li>
+            <li>Integrating mechanics + electronics + code</li>
+          </ul>
+        </div>
+
+        <div class="project-links">
+          <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_robotics-clawmachine-universityoftartu-activity-7415492578428485632-aXzg?utm_source=share&utm_medium=member_desktop&rcm=ACoAADPk6BsBnK5_V8z7kALfiGrpAFCR9HOnarY" target="_blank" rel="noopener">
+            <i class="fa-brands fa-linkedin"></i> LinkedIn Post
+          </a>
+        </div>
+      </div>
+    </article>
+
     <!-- ===================== SenseCAP Watcher ===================== -->
     <article class="project-row">
       <div class="project-media">
-        <div class="media-placeholder">
-          <i class="fa-solid fa-eye"></i>
-          <p>Add images here later (optional)</p>
+        <div class="carousel" data-carousel data-set="sensecap">
+          <button class="car-btn prev" type="button" aria-label="Previous image"><i class="fa-solid fa-chevron-left"></i></button>
+
+          <div class="car-stage">
+            <img class="car-image" src="assets/img/sensecap-1.jpg" alt="SenseCAP Watcher photo" loading="lazy" decoding="async" />
+          </div>
+
+          <button class="car-btn next" type="button" aria-label="Next image"><i class="fa-solid fa-chevron-right"></i></button>
+          <div class="car-dots" aria-label="Carousel navigation"></div>
         </div>
       </div>
 
@@ -144,8 +202,8 @@
         <p class="project-tagline">Human-detection and gesture-recognition demonstration.</p>
 
         <p class="project-text">
-          Developed a full demonstration pipeline using the Seeed Studio SenseCAP Watcher, including human detection,
-          gesture-triggered interactions, and integration concepts for expressive companion-robot behaviour.
+          Built an interactive demo pipeline using the Seeed Studio SenseCAP Watcher, showcasing human detection and gesture-triggered responses.
+          Explored how sensors + behavior logic can support expressive companion-robot interaction.
         </p>
 
         <ul class="project-tags">
@@ -153,6 +211,15 @@
           <li>Edge AI</li>
           <li>Interaction demos</li>
         </ul>
+
+        <div class="project-skills">
+          <h3 class="skills-title"><i class="fa-solid fa-sparkles"></i> Skills gained</h3>
+          <ul class="skills-list">
+            <li>Demo design + behavior logic for interaction</li>
+            <li>Testing and presenting sensor capabilities</li>
+            <li>Translating features into user-facing outcomes</li>
+          </ul>
+        </div>
 
         <div class="project-links">
           <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_ai-activity-7299841166122913792-ey76?utm_source=share&utm_medium=member_desktop&rcm=ACoAADPk6BsBnK5_V8z7kALfiGrpAFCR9HOnarY" target="_blank" rel="noopener">
@@ -165,20 +232,25 @@
     <!-- ===================== Ortomi ===================== -->
     <article class="project-row">
       <div class="project-media">
-        <div class="media-placeholder">
-          <i class="fa-solid fa-people-group"></i>
-          <p>Add images here later (optional)</p>
+        <div class="carousel" data-carousel data-set="ortomi">
+          <button class="car-btn prev" type="button" aria-label="Previous image"><i class="fa-solid fa-chevron-left"></i></button>
+
+          <div class="car-stage">
+            <img class="car-image" src="assets/img/ortomi-1.jpg" alt="Ortomi photo" loading="lazy" decoding="async" />
+          </div>
+
+          <button class="car-btn next" type="button" aria-label="Next image"><i class="fa-solid fa-chevron-right"></i></button>
+          <div class="car-dots" aria-label="Carousel navigation"></div>
         </div>
       </div>
 
       <div class="project-info">
-        <h2 class="project-title"><i class="fa-solid fa-people-group"></i> Ortomi & Other Companions</h2>
+        <h2 class="project-title"><i class="fa-solid fa-people-group"></i> Ortomi</h2>
         <p class="project-tagline">Exploring expressive micro-robots & social-robot design.</p>
 
         <p class="project-text">
-          Studied Ortomi and other small social robots to understand expressive motion, mechanical simplicity,
-          low-power electronics, and interaction styles. This analysis informed the movement patterns and gesture design
-          for my own companion-robot projects.
+          Studied Ortomi to understand expressive motion, mechanical simplicity, low-power electronics, and interaction styles.
+          Used these insights to guide gesture design and personality in my own companion-robot builds.
         </p>
 
         <ul class="project-tags">
@@ -186,6 +258,15 @@
           <li>Rapid prototyping</li>
           <li>Expressive motion</li>
         </ul>
+
+        <div class="project-skills">
+          <h3 class="skills-title"><i class="fa-solid fa-sparkles"></i> Skills gained</h3>
+          <ul class="skills-list">
+            <li>Design analysis: behavior → hardware → constraints</li>
+            <li>Extracting motion/gesture principles from robots</li>
+            <li>Applying insights into your own design language</li>
+          </ul>
+        </div>
 
         <div class="project-links">
           <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_innovation-activity-7301253669088342018-Em7h?utm_source=share&utm_medium=member_desktop&rcm=ACoAADPk6BsBnK5_V8z7kALfiGrpAFCR9HOnarY" target="_blank" rel="noopener">
@@ -198,9 +279,15 @@
     <!-- ===================== SO-101 ===================== -->
     <article class="project-row">
       <div class="project-media">
-        <div class="media-placeholder">
-          <i class="fa-solid fa-robot"></i>
-          <p>Add images here later (optional)</p>
+        <div class="carousel" data-carousel data-set="so101">
+          <button class="car-btn prev" type="button" aria-label="Previous image"><i class="fa-solid fa-chevron-left"></i></button>
+
+          <div class="car-stage">
+            <img class="car-image" src="assets/img/101-1.jpg" alt="SO-101 leader-follower arms photo" loading="lazy" decoding="async" />
+          </div>
+
+          <button class="car-btn next" type="button" aria-label="Next image"><i class="fa-solid fa-chevron-right"></i></button>
+          <div class="car-dots" aria-label="Carousel navigation"></div>
         </div>
       </div>
 
@@ -209,9 +296,8 @@
         <p class="project-tagline">LeRobot Hackathon project.</p>
 
         <p class="project-text">
-          Built and calibrated one leader and one follower SO-101 robotic arm. The follower replicated the leader’s
-          movements in real-time to perform precise pick-and-place tasks. Demonstrated synchronized motion-following
-          using the LeRobot framework.
+          Built and calibrated one leader and one follower SO-101 arm. The follower replicated the leader’s movement in real-time
+          to perform pick-and-place tasks. Demonstrated synchronized motion-following using the LeRobot framework.
         </p>
 
         <ul class="project-tags">
@@ -219,6 +305,15 @@
           <li>Kinematics</li>
           <li>LeRobot</li>
         </ul>
+
+        <div class="project-skills">
+          <h3 class="skills-title"><i class="fa-solid fa-sparkles"></i> Skills gained</h3>
+          <ul class="skills-list">
+            <li>Calibration + joint mapping (leader → follower)</li>
+            <li>Debugging real-time motion replication</li>
+            <li>Demo storytelling for robotics projects</li>
+          </ul>
+        </div>
 
         <div class="project-links">
           <a href="https://www.linkedin.com/posts/ali-badshah-4776aa203_lerobot-lerobot-so101-activity-7340774137021222913-y4Y6?utm_source=share&utm_medium=member_desktop&rcm=ACoAADPk6BsBnK5_V8z7kALfiGrpAFCR9HOnarY" target="_blank" rel="noopener">
@@ -240,7 +335,15 @@
 <script>
   document.getElementById("year").textContent = new Date().getFullYear();
 
-  // Carousel setup (supports multiple carousels)
+  const sets = {
+    pia: ["assets/img/pia-1.jpg", "assets/img/pia-2.jpg", "assets/img/pia-3.jpg"],
+    rsc: ["assets/img/RSC-1.jpg", "assets/img/RSC-2.jpg"],
+    claw: ["assets/img/claw-1.jpg", "assets/img/claw-2.jpg", "assets/img/claw-3.jpg"],
+    sensecap: ["assets/img/sensecap-1.jpg"],
+    ortomi: ["assets/img/ortomi-1.jpg"],
+    so101: ["assets/img/101-1.jpg", "assets/img/101-2.jpg", "assets/img/101-3.jpg"]
+  };
+
   const carousels = document.querySelectorAll("[data-carousel]");
   carousels.forEach((carousel) => {
     const img = carousel.querySelector(".car-image");
@@ -248,24 +351,8 @@
     const prev = carousel.querySelector(".prev");
     const next = carousel.querySelector(".next");
 
-    // Detect which carousel this is by current src, then define its image set
-    const src = img.getAttribute("src") || "";
-    let images = [];
-
-    if (src.includes("pia-")) {
-      images = [
-        "assets/img/pia-1.jpg",
-        "assets/img/pia-2.jpg",
-        "assets/img/pia-3.jpg",
-      ];
-    } else if (src.includes("RSC-")) {
-      images = [
-        "assets/img/RSC-1.jpg",
-        "assets/img/RSC-2.jpg",
-      ];
-    } else {
-      images = [src];
-    }
+    const key = carousel.getAttribute("data-set");
+    const images = sets[key] || [img.getAttribute("src")];
 
     let index = 0;
 
